[package]
name = "indracore-archive"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "2.33.1", features = ["yaml", "suggestions", "color"] }
ctrlc = { version = "3.1.5", features = ["termination"] }
log = "0.4"
serde = "1.0"
toml = "0.5"

sc-chain-spec = { git = "https://github.com/selendra/substrate", branch = "master" }
indracore-service = { git = "https://github.com/selendra/indracore-dev", branch = "master" }

substrate-archive = { path = "../../substrate-archive", features = ["logging"] }
substrate-archive-common = { path = "../../substrate-archive-common" }
substrate-archive-backend = { path = "../../substrate-archive-backend" }