[package]
name = "substrate-archive-backend"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# External
parking_lot = "0.10"
futures = { version = "0.3" }
hashbrown = { version = "0.8", features = ["inline-more"] }
arc-swap = "0.4.7"
log = "0.4"
xtra = { version = "0.5.0-beta.4", features = ["with-smol-0_3"] }


# Parity
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }
kvdb = "0.7"
kvdb-rocksdb = "0.9"
hash-db = "0.15"
parity-util-mem = "0.7"


# Substrate
sp-database = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-runtime = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-blockchain = { git = "https://github.com/selendra/indracore", branch = "main" }
sc-client-api = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-core = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-state-machine = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-storage = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-trie = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-version = {  git = "https://github.com/selendra/indracore", branch = "main" }
sc-executor = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-api = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-externalities = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-block-builder = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-io = { git = "https://github.com/selendra/indracore", branch = "main" }

# Workspace
substrate-archive-common = { path = '../substrate-archive-common' }

[features]
default = ["logging"]
logging = ["substrate-archive-common/logging"]
test_rocksdb = []
