[package]
name = "substrate-archive"
version = "0.5.0-pre"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# external
async-trait = "0.1"
coil = { git = "https://github.com/insipx/coil" }
log = "0.4"
fdlimit = "0.2"
flume = "0.10.1"
futures = "0.3"
hashbrown = { version = "0.9", features = ["inline-more"] }
hex = "0.4"
itertools = "0.10"
itoa = "0.4.7"
# Just a simple wrapper around std::thread that `joins on drop`
jod-thread = "0.1.2"
num_cpus = "1"
parking_lot = "0.11"
rayon = "1.4"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "1.2"
sqlx = { version = "0.4", default-features = false, features = ["postgres", "macros", "runtime-async-std-rustls", "migrate", "json", "offline"] }
tempfile = "3.2.0"
thiserror = "1.0"
xtra = { version = "0.5.0-rc.1", features = ["with-smol-1"] }

codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }

sc-chain-spec = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-executor = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "master" }

# Workspace
substrate-archive-backend = { path = '../substrate-archive-backend' }
substrate-archive-common = { path = '../substrate-archive-common' }

[dev-dependencies]
indracore-service = { package = "indracore-service", git = "https://github.com/selendra/indracore-dev", branch = "main" }
pretty_env_logger = "0.4.0"
# used in tests for storing test data on disk
flate2 = "1.0"
bincode = "1.3"
tempfile = "3.2"
once_cell = "1.4.1"
dotenv = "0.15.0"

[features]
default = ["logging"]
logging = ["substrate-archive-common/logging"]
test_rocksdb = []
